Adding the users resource with password digest and validation of username

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
     <div class="navbar ui medium inverted menu">
       <div class="ui container">
-        <a href="#home">Chatroom</a>
+        <a><%= link_to "Chatroom", root_path %></a>
         <a href="#news">Messages</a>
         <div class="dropdown right menu">
           <div class="dropbtn item" onclick="myFunction()">Account
